attempt to fix wonky spacing between paragraphs

--- a/app/assets/stylesheets/sumofus/global/typography.scss
+++ b/app/assets/stylesheets/sumofus/global/typography.scss
@@ -80,8 +80,10 @@ a {
   p, span, div {
     line-height: 1.6em;
   }
+  // don't pad the paragraphs in the WYSIWYG or the output
   p, ul, ol {
-    margin-bottom: 18px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
   ul, ol {
     padding-left: 40px;
